--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap');
+
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Rubik', sans-serif;
   overflow-x: hidden;
   min-height: 100vh;
 }
@@ -33,15 +35,15 @@ a {
   align-items: center;
 }
 
-.fullwidth {
-  width: 100%;
-}
-
-.maxwidth {
-  width: 100%;
-  max-width: 1280px;
-}
-
 .app {
+  overflow-x: hidden;
+}
+
+.slide {
   padding: 0 5%;
+  min-height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
