--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -5,25 +5,37 @@
 .form-header {
   width: 100%;
   padding: 20px 0;
+  // margin-bottom: 50px;
 }
 
 .form-container {
-  width: 40%;
+  width: 100%;
+  height: calc(100vh - 76.5px);
+}
+
+.form-fields-wrapper {
+  max-width: 35%;
+  width: 100%;
   border: 1px solid #ccc;
   border-radius: 10px;
   padding: 10px;
+  margin-bottom: 150px;
 }
 
-.form-container > h2 {
+.form-fields-wrapper > h2 {
   text-align: center;
   font-weight: 500;
   font-size: 1.5rem;
   color: #1976d2;
 }
 
+.form-fields-wrapper > form {
+  width: 100%;
+}
+
 .form-fields {
   width: 100%;
-  padding: 10px;
+  padding: 10px 10px 0 10px;
 }
 
 .form-fields > div {
