--- a/src/components/user-list/user-list.scss
+++ b/src/components/user-list/user-list.scss
@@ -9,16 +9,15 @@
 .user-list-cards {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  // grid-template-rows: repeat(4, 1fr);
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
+  grid-column-gap: 15px;
+  grid-row-gap: 15px;
+  padding-bottom: 20px;
 }
 
 .user-card {
   min-width: 15%;
-  margin: 0 10px 10px 0;
   cursor: pointer;
-  transition: .2s;
+  transition: 0.2s;
 }
 
 .user-card > div {
@@ -30,5 +29,41 @@
 }
 
 .user-card:hover {
-  transform: scale(1.1)
+  transform: scale(1.1);
+}
+
+.card-buttons > button {
+  margin: 0 5px;
+}
+
+@media (max-width: 1220px) {
+  .user-list-cards {
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+  }
+  
+  .user-card:hover {
+    transform: scale(1.05);
+  }
+}
+
+@media (max-width: 945px) {
+  .user-list-cards {
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+  }
+}
+
+@media (max-width: 624px) {
+  .user-list-cards {
+    grid-template-columns: repeat(1, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+  }
+
+  .user-list-cards {
+    padding-bottom: 50px;
+  }
 }
