--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -1,48 +1,40 @@
 .form {
   width: 100%;
-}
-
-.form-header {
-  width: 100%;
-  padding: 20px 0;
-  margin-bottom: 50px;
-}
-
-.form-container {
-  width: 100%;
-  height: calc(100vh - 126.5px);
-  min-width: 300px;
-  max-width: 35%;
-}
-
-.form-fields-wrapper {
-  width: 100%;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 10px;
-  margin-bottom: 150px;
-}
-
-.form-fields-wrapper > h2 {
-  text-align: center;
-  font-weight: 500;
-  font-size: 1.5rem;
-  color: #1976d2;
-}
-
-.form-fields-wrapper > form {
-  width: 100%;
-}
-
-.form-fields {
-  width: 100%;
-  padding: 10px 10px 0 10px;
-}
-
-.form-fields > div {
-  margin-bottom: 10px;
-}
-
-.btn-arrow {
-  margin-right: 5px;
+  .form-header {
+    width: 100%;
+    padding: 20px 0;
+    margin-bottom: 50px;
+  }
+  .form-container {
+    width: 100%;
+    height: calc(100vh - 126.5px);
+    min-width: 300px;
+    max-width: 35%;
+    .form-fields-wrapper {
+      width: 100%;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      padding: 10px;
+      margin-bottom: 150px;
+      h2 {
+        text-align: center;
+        font-weight: 500;
+        font-size: 1.5rem;
+        color: #1976d2;
+      }
+      form {
+        width: 100%;
+      }
+    }
+  }
+  .form-fields {
+    width: 100%;
+    padding: 10px 10px 0 10px;
+    div {
+      margin-bottom: 10px;
+    }
+  }
+  .btn-arrow {
+    margin-right: 5px;
+  }
 }
